# Coding-Challenge

./: .gitignore  README.md
backend/: .gitignore  database.db  pyproject.toml
backend/src/: utils.py
backend/src/database/: db.py  models.py
backend/src/routes/: challenge.py
frontend/: .env  index.html  package-lock.json
frontend/src/challenge/: MCQChallenge.jsx
frontend/src/utils/: api.js
